Revision history for perl distribution Convos

6.20 Not Released
 - Compatible with Mojolicious::Plugin::Webpack 1.00
 - Bumped many JavaScript dependencies
 - Fix catching unhandled send_p() promises
 - Fix join/part actions for the bot plugin
 - Fix showing the correct copyright year
 - Fix showing the installed version when running "convos version"

6.19 2021-05-20T09:03:00+0900
 - Add support for quotes in the CMS

6.18 2021-05-20T07:30:00+0900
 - Changing defaults from freenode to https://libera.chat/
 - Changed sections toggle styling from checkbox to caret

6.17 2021-05-18T12:13:00+0900
 - Fix not enabling the client side router for CMS pages
 - Fix always rendering the same theme for the CMS pages
 - Add support for CONVOS_DEFAULT_THEME and CONVOS_DEFAULT_SCHEME environment variables

6.16 2021-05-18T11:03:00+0900
 - Add <SimpleField> for form fields without styling
 - Add "viewport" store, which replaces "nColumns" store
 - Add client side log utility for easier debugging
   * Can be toggled with "?_debug=root:trace,category:level"
 - Fix "removeConnectionProfile" operation in the API
 - Fix changing nick, realname, sasl, tls and tls_verify for forced connections
 - Fix changing source IP for connections
 - Fix constrast issues for "South" theme
 - Fix only loading emojis once
 - Fix only loading translations once
 - Fix rendering issue when switching between connection profiles and profile editor
 - Bumped rollup and svelte dependencies
 - Changed "Generate invite link" button to only be active when an email is filled in
 - Changed client side routing logic
   * Removed routes.js
   * Moved routing logic into App.svelte
 - Replaced form "change" event handling with svelte stores bound to the form elements
   * This will hopefully fix some issues where toggling TLS did not work properly
 - Replaced node-sass with sass
 - Removed "anonymous" and "authenticated" roles from client side User object roles